cmake_minimum_required(VERSION 4.1)
project(2026)

set(CMAKE_CXX_STANDARD 20)

add_executable(2026 main.cpp
        0101_1.cpp
        0101_2.cpp
        0101_3.cpp
        0101_4.cpp
        0101_5.cpp
        0101_6.cpp
        0101_7.cpp
        01018.cpp
        0101_19.cpp
        0101_20.cpp
        0101_21.cpp
        0101_22.cpp
        0102_1.cpp
        0102_2.cpp
        0102_3.cpp
        0102_4.cpp
        0102_5.cpp
        0102_6.cpp
        0102_7.cpp
        0102_8.cpp
        0102_9.cpp
        0102_10.cpp
        0102_11.cpp)
