cmake_minimum_required(VERSION 4.1)
project(2026)

set(CMAKE_CXX_STANDARD 20)

add_executable(2026 main.cpp
        0101_1.cpp
        0101_2.cpp
        0101_3.cpp
        0101_4.cpp
        0101_5.cpp
        0101_6.cpp
        0101_7.cpp
        01018.cpp
        0101_19.cpp
        0101_20.cpp
        0101_21.cpp
        0101_22.cpp
        0102_1.cpp
        0102_2.cpp
        0102_3.cpp
        0102_4.cpp
        0102_5.cpp
        0102_6.cpp
        0102_7.cpp
        0102_8.cpp
        0102_9.cpp
        0102_10.cpp
        0102_11.cpp
        0102_12.cpp
        0103_1.cpp
        0103_2.cpp
        0103_3.cpp
        0103_4.cpp
        0103_5.cpp
        0103_6.cpp
        0103_7.cpp
        0103_8.cpp
        0103_9.cpp
        0103_10.cpp
        0103_11.cpp
        0103_12.cpp
        0103_13.cpp
        0103_14.cpp
        0104_1.cpp
        0104_2.cpp
        0104_3.cpp
        0104_4.cpp
        0104_5.cpp
        0104_6.cpp
        0104_7.cpp
        0105_1.cpp
        0105_2.cpp
        0105_3.cpp
        0105_4.cpp
        0106_1.cpp
        0106_2.cpp
        0106_3.cpp
        0106_4.cpp
        0106_5.cpp
        0106_6.cpp
        0106_7.cpp
        0106_8.cpp
        0107_1.cpp)
